# interner

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: miri.yml  tests.yml
.rustme/: config.ron  docs.md  header.md
coverage/: index.html
coverage/examples/: buffers.rs.html  global-buffers.rs.html  global-paths.rs.html  global-strings.rs.html  index.html  paths.rs.html  strings.rs.html
coverage/src/: global.rs.html  index.html  lib.rs.html  pool.rs.html  shared.rs.html  tests.rs.html
examples/: buffers.rs  global-buffers.rs  global-paths.rs  global-strings.rs  paths.rs  strings.rs
main/: crates.js  help.html  search-index.js  settings.html  source-files.js
main/implementors/interner/: trait.PoolKind.js
main/interner/: all.html  index.html  sidebar-items.js  struct.GlobalPool.html  struct.Iter.html  struct.Pooled.html  trait.PoolKind.html  type.GlobalBuffer.html  type.GlobalPath.html  type.GlobalString.html
main/interner/global/: index.html  sidebar-items.js  struct.GlobalPool.html  struct.StaticPooledBuffer.html  struct.StaticPooledPath.html  struct.StaticPooledString.html  type.BufferPool.html  type.GlobalBuffer.html  type.GlobalPath.html  type.GlobalString.html  type.PathPool.html  type.StringPool.html
main/interner/shared/: index.html  sidebar-items.js  struct.SharedPool.html  type.BufferPool.html  type.PathPool.html  type.SharedBuffer.html  type.SharedPath.html  type.SharedString.html  type.StringPool.html
main/src/interner/: global.rs.html  lib.rs.html  pool.rs.html  shared.rs.html
src/: global.rs  lib.rs  pool.rs  shared.rs  tests.rs
(+17 files in other folders)
