[package]
name = "interner"
version = "0.1.1"
edition = "2021"
description = "A string, path, and buffer internment crate with no dependencies."
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/khonsulabs/pot"
keywords = ["string-interner", "interner", "symbols"]
categories = ["encoding"]

[workspace]
members = ["xtask"]

[dependencies]
once_cell = "1.17.1" # TODO remove once Rust 1.70 is released
