[package]
name = "interner"
version = "0.2.0"
edition = "2021"
description = "A string, path, and buffer internment crate with no dependencies."
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/khonsulabs/pot"
keywords = ["string-interner", "interner", "symbols"]
categories = ["encoding"]
rust-version = "1.70.0"

[workspace]
members = ["xtask"]
